--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <h1>JS & jQuery Flashcards</h1>
   <button class="btn btn-warning" id="js">JavaScript(JS)</button>
-    <p>An object-oriented computer programming language commonly used to create interactive effects within web browsers.</p>
+    <p id="p-js"> An object-oriented computer programming language commonly used to create interactive effects within web browsers.</p>
   <button class="btn btn-warning" id="operators">Operators</button>
     <p>Operator is a symbol that is used to perform an operation. Most often these operations are arithmetic (addition, subtraction, etc), but not always.</p>
   <button class="btn btn-warning" id="variables">Variables</button>
