attributes works, need to add name + class to all

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <p>Comments in JavaScript are used to explain the code and make the program more readable for developers. ... There are single-line comments (which comment out one line or a part of one line) and multi-line comments (which comment out a block of code). Multi-line comments are more often used for formal documentations.</p>
   <button class="btn btn-warning" id="jquery">jQuery</button>
     <p>jQuery is an open-sourced JavaScript library that simplifies creation and navigation of web applications. Specifically, jQuery simplifies HTML Document Object Model (DOM) manipulation, Asynchronous JavaScript and XML (Ajax) and event handling.</p>
-  <button class="btn btn-warning" id="attributes">Attributes</button>
-    <p>attributes define how the property can be accessed (is it readable?, is it writable?) In JavaScript, all attributes can be read, but only the value attribute can be changed (and only if the property is writable).</p>
+  <button class="btn btn-warning" name="attributes">Attributes</button>
+    <p class='attributes'>attributes define how the property can be accessed (is it readable?, is it writable?) In JavaScript, all attributes can be read, but only the value attribute can be changed (and only if the property is writable).</p>
 </body>
 </html>
